# audiobookbay-automated

./: .dockerignore  .gitattributes  .gitignore  .markdownlint.yaml  .mdformat.toml  .pre-commit-config.yaml  .prettierrc.yaml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  clients.py  docker-compose.yaml  entrypoint.sh  healthcheck.py  jest.config.js  jest.setup.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  reproduce_issue.py  scraper.py
.devcontainer/: devcontainer.json
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: ci.yaml  docker-publish.yaml  docker-publish.yml  e2e.yaml  pre-commit-sync.yaml  release.yaml  vendor-sync.yaml
app/: __init__.py  app.py  clients.py  config.py  constants.py  extensions.py  healthcheck.py  requirements.txt  routes.py  scraper.py  utils.py
app/scraper/: __init__.py  core.py  network.py  parser.py
app/static/css/: details.css  search.css  status.css  style.css
app/static/js/: actions.js  search.js  status.js
app/templates/: base.html  details.html  search.html  status.html
audiobook_automated/: __init__.py  app.py  clients.py  config.py  constants.py  errors.py  extensions.py  healthcheck.py  routes.py  utils.py
audiobook_automated/clients/: __init__.py  base.py  client_template.py  deluge.py  manager.py  qbittorrent.py  transmission.py
audiobook_automated/scraper/: __init__.py  core.py  network.py  parser.py
audiobook_automated/static/css/: details.css  modal.css  search.css  splash.css  status.css  style.css
audiobook_automated/static/js/: actions.js  search.js  status.js  theme.js
audiobook_automated/templates/: base.html  details.html  search.html  status.html
examples/: .env.example  docker-compose.env.yaml  docker-compose.no-env.yaml
playwright-report/: index.html
scripts/: manage_headers.py
stubs/deluge_web_client/: __init__.pyi
tests/: conftest.py  test_app_edge_cases.py  test_clients.py  test_clients_coverage.py  test_healthcheck.py  test_limiter.py  test_routes.py  test_scraper.py  test_scraper_coverage.py  test_scraper_gap_fill.py  test_security.py  test_startup.py  test_utils.py
tests/e2e/: layout.spec.ts  scenarios.spec.ts
tests/fixtures/: sample_page.html
tests/functional/: __init__.py  conftest.py  test_api.py  test_api_invalid.py  test_extra_cases.py  test_routes_coverage.py  test_routes_extra.py  test_search.py  test_security_integration.py  test_system.py
tests/integration/: test_scraper_pipeline.py
tests/js/: actions.test.js  search.test.js  status.test.js  vendor_integration.test.js
tests/scraper/: __init__.py  conftest.py  test_core.py  test_core_extra.py  test_details.py  test_fetcher.py  test_integration.py  test_magnet.py  test_network.py  test_network_malformed.py  test_parser.py  test_parser_details.py
tests/security/: __init__.py  test_core.py
tests/unit/: test_app_entry.py  test_app_entrypoint.py  test_clients.py  test_clients_coverage.py  test_concurrency.py  test_config.py  test_config_parsing.py  test_coverage_gaps.py  test_extensions.py  test_healthcheck.py  test_logging.py  test_parser_fixtures.py  test_splash_config.py  test_startup.py  test_utils.py
tests/unit/clients/: __init__.py  conftest.py  test_base.py  test_deluge.py  test_manager.py  test_manager_syntax.py  test_qbittorrent.py  test_template.py  test_transmission.py
verification/: verify_navbar_padding.py  verify_send_button.py  verify_splash.py  verify_theme.py  verify_ui_flows.py
