[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobookbay-automated"
version = "1.0.0"
description = "Automated AudiobookBay downloader and torrent manager"
requires-python = ">=3.11,<3.15"
authors = [
    { name = "meek2100", email = "meek2100@users.noreply.github.com" },
    { name = "jamesry96", email = "jamesry96@users.noreply.github.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask>=3.0.3",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "qbittorrent-api>=2024.10.68",
    "transmission-rpc>=7.0.11",
    "deluge-web-client>=2.0.1",
    "cachetools>=5.5.0",
    "gunicorn>=23.0.0",
    "Flask-WTF>=1.2.1",
    "Flask-Limiter>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-flask>=1.3.0",
    "pytest-env>=1.1.3",
    "pytest-cov>=5.0.0",
    "requests-mock>=1.12.1",
    "ruff>=0.6.2",
    "pre-commit>=3.8.0",
    "mypy>=1.11.1",
    "types-requests",
    "types-cachetools",
    "types-setuptools",
    "types-flask",
    "types-beautifulsoup4",
    "types-jsonschema",
    "bandit>=1.7.9",
    "pydocstyle>=6.3.0",
]

[project.urls]
"Homepage" = "https://github.com/jamesry96/audiobookbay-automated"

[tool.setuptools.packages.find]
where = ["."]
include = ["audiobook_automated*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=audiobook_automated --cov-report=term-missing --cov-fail-under=100"
env = [
    "TESTING=1",
    "SAVE_PATH_BASE=/tmp/test_downloads",
    "SECRET_KEY=test-secret-key",
    "DL_CLIENT=qbittorrent",
    "DL_HOST=localhost",
    "DL_PORT=8080",
    "DL_USERNAME=admin",
    "DL_PASSWORD=admin",
]
filterwarnings = [
    "ignore::DeprecationWarning:bs4.*",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
strict = true

[[tool.mypy.overrides]]
module = [
    "flask_wtf.csrf",
    "flask_limiter.*",
    "deluge_web_client",
    "transmission_rpc",
    "qbittorrentapi",
    "bs4.*",
    "urllib3.*",
    "requests_mock.*",
    "pytest.*",
    "requests.*",
    "cachetools.*",
]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.bandit]
skips = ["B101"]
exclude = ["tests/"]

[tool.pydocstyle]
convention = "google"
