# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobookbay_automated"
version = "1.0.0"
description = "Automated AudiobookBay downloader and torrent manager"
requires-python = ">=3.11,<3.15"
authors = [
    { name = "meek2100", email = "meek2100@users.noreply.github.com" },
    { name = "jamesry96", email = "jamesry96@users.noreply.github.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Flask==3.1.2",
    "requests==2.32.5",
    "beautifulsoup4==4.14.3",
    "lxml==6.0.2",
    "qbittorrent-api==2025.11.1",
    "transmission-rpc==7.0.11",
    "deluge-web-client==2.0.3",
    "cachetools==6.2.4",
    "gunicorn==23.0.0",
    "Flask-WTF==1.2.2",
    "Flask-Limiter==4.1.1",
]
[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-flask==1.3.0",
    "pytest-env==1.2.0",
    "pytest-cov==7.0.0",
    "requests-mock==1.12.1",
    "ruff==0.14.9",
    "pre-commit==4.5.0",
    "mypy==1.19.1",
    "types-requests==2.32.4.20250913",
    "types-cachetools==6.2.0.20251022",
    "types-setuptools==80.9.0.20250822",
    "types-jsonschema==4.25.1.20251009",
    "types-gunicorn==23.0.0.20251031",
]

[project.urls]
"Homepage" = "https://github.com/jamesry96/audiobookbay-automated"

[tool.setuptools.packages.find]
where = ["."]
include = ["audiobook_automated*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=audiobook_automated --cov-report=term-missing --cov-fail-under=100"
env = [
    "TESTING=1",
    "SAVE_PATH_BASE=/tmp/test_downloads",
    "SECRET_KEY=test-secret-key",
    "DL_CLIENT=qbittorrent",
    "DL_HOST=localhost",
    "DL_PORT=8080",
    "DL_USERNAME=admin",
    "DL_PASSWORD=admin",
]
filterwarnings = ["ignore::DeprecationWarning:bs4.*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "S", "UP", "PL"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests are allowed to use asserts, magic values, hardcoded passwords, and weak crypto
"tests/**/*" = [
    "S",
    "PLR2004",
    "PLR0913",
    "PLC0415",
    "S101",
    "S104",
    "S105",
    "S106",
    "S108",
    "PLR1714",
]
# Network uses globals for singleton/semaphore management
"audiobook_automated/scraper/network.py" = ["PLW0603"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
strict = true
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = [
    "flask_wtf.csrf",
    "transmission_rpc",
    "bs4.*",
    "urllib3.*",
    "requests_mock.*",
    "pytest.*",
]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
